--- a/app/views/manifestations/index.html+phone.erb
+++ b/app/views/manifestations/index.html+phone.erb
@@ -18,4 +18,4 @@
 <% end %>
 </ul>
 
-<%= paginate(@manifestations, :window => 0, :theme => 'enju_leaf') %>
+<%= paginate(@manifestations, :window => 0) %>
