--- a/app/views/manifestations/_language_facet.html.erb
+++ b/app/views/manifestations/_language_facet.html.erb
@@ -3,7 +3,7 @@
   <%- languages = params[:language].to_s.split -%>
   <%- current_languages = languages.dup -%>
   <%- @language_facet.each do |facet| -%>
-    <%- language = Language.where(:name => facet.value).select([:name, :display_name]).first -%>
+    <%- language = Language.where(:name => facet["term"]).select([:name, :display_name]).first -%>
     <%- if language -%>
       <li>
         <%= language_facet(language, current_languages, facet) %>
