--- a/app/views/manifestations/index.html.erb
+++ b/app/views/manifestations/index.html.erb
@@ -27,7 +27,7 @@
 
   <%- if @manifestations.total_count > 0 -%>
     <p>
-      <%= t('page.number_of_search_results', :count => @count[:query_result], :numdocs => Manifestation.search.total, :seconds => sprintf("%.3f", @seconds)) -%>
+      <%= t('page.number_of_search_results', :count => @count[:query_result], :numdocs => Manifestation.search('[* TO *]').results.total, :seconds => sprintf("%.3f", @seconds)) -%>
       <%- if @count[:query_result] > Setting.max_number_of_results -%>
         <br />
         <%= t('page.limit_exceeded', :count => Setting.max_number_of_results) -%>
