--- a/app/views/manifestations/_holding.html.erb
+++ b/app/views/manifestations/_holding.html.erb
@@ -1,3 +1,3 @@
-<div class="holding_index" id="holding_<%= manifestation.id -%>" style="display: none">
+<div class="holding_index" id="holding_<%= manifestation.id -%>">
   <%= render 'manifestations/show_holding', :manifestation => manifestation -%>
 </div>
