--- a/app/views/manifestations/_show_holding.html.erb
+++ b/app/views/manifestations/_show_holding.html.erb
@@ -9,9 +9,14 @@
       <th><%= t('activerecord.models.circulation_status') -%></th>
     <% end %>
   </tr>
-  <%- manifestation.items.on_shelf.each do |item| -%>
-    <tr>
+  <%- manifestation.items.on_shelf.each_with_index do |item, idx| -%>
+    <tr id="manifestation_<%= manifestation.id %>_item_<%= idx %>"
+      <% if @manifestation.nil? and idx > 1 %>
+	class="manifestation_<%= manifestation.id %>_hidden_items"
+	style="display:none"
+      <% end %>>
       <td>
+(<%= idx %>)
         <%- if item.item_identifier? -%>
           <%= link_to(item.item_identifier, item, :id => "item_identifier_item_#{item.id}") -%>
         <%- else -%>
@@ -57,6 +62,9 @@
     <% end %>
   <%- end -%>
 </table>
+<% if @manifestation.nil? and manifestation.items.on_shelf.size > 2 %>
+<p id="manifestation_<%= manifestation.id %>_hidden_button"><%= link_to_function t('holdings_hidden_items',:size=>manifestation.items.on_shelf.size), "$('tr.manifestation_#{ manifestation.id }_hidden_items').toggle();$('#manifestation_#{ manifestation.id }_hidden_button').toggle()" -%></p>
+<% end %>
 <%- if can? :create, Item -%>
 <p><%= link_to t('page.new', :model => t('activerecord.models.item')), new_manifestation_item_path(manifestation) -%></p>
 <%- end -%>
