--- a/app/views/manifestations/show.html.erb
+++ b/app/views/manifestations/show.html.erb
@@ -1,4 +1,4 @@
-<div id="content_detail" class="ui-corner-all" itemscope="itemscope" itemtype="http://schema.org/Book">
+<div id="content_detail" class="ui-corner-all ui-widget-content" itemscope="itemscope" itemtype="http://schema.org/Book">
   <h1 class="title"><%= t('page.showing', :model => t('activerecord.models.manifestation')) -%></h1>
   <div id="content_list">
     <p id="notice"><%= notice %></p>
@@ -16,7 +16,7 @@
   </div>
 </div>
 
-<div id="submenu" class="ui-corner-all">
+<div id="submenu" class="ui-corner-all ui-widget-content">
   <%= render 'manifestations/book_jacket', :manifestation => @manifestation -%>
   <ul>
     <%- if @manifestation.picture_files.exists? -%>
