--- a/app/views/manifestations/_show_detail_librarian.html.erb
+++ b/app/views/manifestations/_show_detail_librarian.html.erb
@@ -1,7 +1,7 @@
   <div id="tabs">
     <%= render 'manifestations/tab_menu', :manifestation => manifestation %>
     <div id="detail">
-    <% cache([:manifestation => manifestation.id, :fragment => 'show_detail_librarian_html', :role => current_user_role_name, :locale => @locale]) do %>
+    <% cache(:manifestation => manifestation.id, :fragment => 'show_detail_librarian_html', :role => current_user_role_name, :locale => @locale) do %>
       <table class="table table-striped" id="resource_detail">
         <%= embed_content(manifestation) -%>
         <% if manifestation.title_alternative? %>
