--- a/app/views/manifestations/_title.mobile.erb
+++ b/app/views/manifestations/_title.mobile.erb
@@ -1,4 +1,4 @@
-<% cache([:manifestation => manifestation.id, :fragment => 'title_mobile', :role => current_user_role_name, :locale => @locale]) do %>
+<% cache(:manifestation => manifestation.id, :fragment => 'title_mobile', :role => current_user_role_name, :locale => @locale) do %>
   <h2 class="resource_title">
     [M]
     <%= link_to title_with_volume_number(manifestation), manifestation, :itemprop => 'name' -%>
