--- a/app/views/manifestations/_manifestation.html.erb
+++ b/app/views/manifestations/_manifestation.html.erb
@@ -8,7 +8,7 @@
                 <div class="access_address">
                   <%= link_to manifestation.access_address, manifestation.access_address if manifestation.access_address.present? -%>
                 </div>
-                <%- unless manifestation.items.on_shelf.empty? -%>
+                <%- unless manifestation.items.for_checkout.on_shelf.empty? -%>
                   (<%= link_to_function t('page.holding'), "$('#holding_#{manifestation.id}').toggle()" -%>)
                 <%- end -%>
                 <% if defined?(EnjuBookmark) %>
