--- a/app/views/manifestations/_manifestation.html.erb
+++ b/app/views/manifestations/_manifestation.html.erb
@@ -9,7 +9,7 @@
                 <div class="access_address">
                   <%= link_to manifestation.access_address, manifestation.access_address if manifestation.access_address.present? -%>
                 </div>
-                <%- unless manifestation.items.on_shelf.empty? -%>
+                <%- unless manifestation.items.for_checkout.on_shelf.empty? -%>
                   (<%= link_to "#", {:onclick => "$('#holding_#{manifestation.id}').toggle(); return false;"} do t('page.holding') end %>)
                 <%- end -%>
                 <% if defined?(EnjuBookmark) %>
