updated showing items for checkout

--- a/app/views/manifestations/_show_detail_user.html.erb
+++ b/app/views/manifestations/_show_detail_user.html.erb
@@ -103,7 +103,7 @@
         <% end %>
       </table>
     <% end %>
-      <%- if manifestation.items.on_shelf.exists? -%>
+      <%- if manifestation.items.for_checkout.on_shelf.exists? -%>
         <%= render 'manifestations/show_holding', :manifestation => manifestation -%>
       <%- end -%>
     </div>
