--- a/app/views/manifestations/_manifestation.html.erb
+++ b/app/views/manifestations/_manifestation.html.erb
@@ -8,8 +8,12 @@
                 <div class="access_address">
                   <%= link_to manifestation.access_address, manifestation.access_address if manifestation.access_address.present? -%>
                 </div>
-                <%- unless manifestation.items.for_checkout.on_shelf.empty? -%>
+                <% if current_user.try(:has_role?, 'Librarian') %>
                   (<%= link_to_function t('page.holding'), "$('#holding_#{manifestation.id}').toggle()" -%>)
+                <% else %>
+                  <%- unless manifestation.items.for_checkout.on_shelf.empty? -%>
+                    (<%= link_to_function t('page.holding'), "$('#holding_#{manifestation.id}').toggle()" -%>)
+                  <%- end -%>
                 <%- end -%>
                 <% if defined?(EnjuBookmark) %>
                   <%- if manifestation.tags.first -%>
