--- a/app/views/manifestations/_manifestation.html.erb
+++ b/app/views/manifestations/_manifestation.html.erb
@@ -9,7 +9,9 @@
                   <%= link_to manifestation.access_address, manifestation.access_address if manifestation.access_address.present? -%>
                 </div>
                 <% if current_user.try(:has_role?, 'Librarian') %>
-                  (<%= link_to_function t('page.holding'), "$('#holding_#{manifestation.id}').toggle()" -%>)
+                  <%- unless manifestation.items.on_shelf.empty? -%>
+                    (<%= link_to_function t('page.holding'), "$('#holding_#{manifestation.id}').toggle()" -%>)
+                  <% end %>
                 <% else %>
                   <%- unless manifestation.items.for_checkout.on_shelf.empty? -%>
                     (<%= link_to_function t('page.holding'), "$('#holding_#{manifestation.id}').toggle()" -%>)
