--- a/app/views/manifestations/show.html.erb
+++ b/app/views/manifestations/show.html.erb
@@ -34,7 +34,7 @@
   </script>
   <%- if user_signed_in? -%>
     <div id="call_number_content">
-      <%- @manifestation.items.on_shelf.each do |item| -%>
+      <%- @manifestation.items.for_checkout.on_shelf.each do |item| -%>
         <%- if item.hold?(current_user.library) -%>
           <%= call_number_label(item) -%>
         <%- end -%>
