--- a/app/views/manifestations/_submenu_parent.html.erb
+++ b/app/views/manifestations/_submenu_parent.html.erb
@@ -1,6 +1,6 @@
   <ul>
     <% if can? :create, Manifestation %>
-      <li><%= link_to t('page.new', :model => t('activerecord.models.manifestation')), new_manifestation_path(:parent_id => @parent.id) %></li>
+      <li><%= link_to t('page.new', model: t('activerecord.models.manifestation')), new_manifestation_path(parent_id: @parent.id) %></li>
     <% end %>
     <% if can? :update, @parent %>
       <li><%= link_to t('page.edit'), edit_manifestation_path(@parent) %></li>
