--- a/app/views/manifestations/_tab_menu.html.erb
+++ b/app/views/manifestations/_tab_menu.html.erb
@@ -4,7 +4,7 @@
     <li><a href="#related_manifestation"><em><%= t('page.related_manifestation') -%> (<%= manifestation.original_manifestations.size + manifestation.derived_manifestations.size -%>)</em></a></li>
   <%- end -%>
   <% if defined?(EnjuQuestion) %>
-    <%- unless manifestation.questions(:user => current_user).empty? -%>
+    <%- unless manifestation.questions(user: current_user).empty? -%>
       <li><a href="#question"><em><%= t('resource.question') -%></em></a></li>
     <%- end -%>
   <% end %>
