--- a/app/views/manifestations/_index_form_item.html.erb
+++ b/app/views/manifestations/_index_form_item.html.erb
@@ -1,8 +1,8 @@
 <div class="search_form">
-<%= form_for :manifestations, :url => item_manifestations_path(@item), :html => {:method => 'get'} do -%>
+<%= form_for :manifestations, url: item_manifestations_path(@item), html: {method: 'get'} do -%>
   <p>
     <%= label_tag :search_form_top, t('page.search_term') -%>:
-    <%= search_field_tag 'query', h(@query), {:id => 'search_form_top', :class => 'search_form', :placeholder => t('page.search_term')} -%>
+    <%= search_field_tag 'query', h(@query), {id: 'search_form_top', class: 'search_form', placeholder: t('page.search_term')} -%>
     <% if can? :create, Create %>
       <%= render 'page/add' %>
     <% end %>
