--- a/app/views/manifestations/_list.html.erb
+++ b/app/views/manifestations/_list.html.erb
@@ -7,10 +7,10 @@
 
 <div>
   <%- if manifestations and manifestations.size > @manifestations.limit_value.div(2) -%>
-    <%= form_for :manifestations, :html => {:method => 'get'} do -%>
+    <%= form_for :manifestations, html: {method: 'get'} do -%>
       <p>
         <%= label_tag :search_form_bottom, t('page.search_term') -%>:
-        <%= search_field_tag 'query', h(@query), {:id => 'search_form_bottom', :class => 'search_form', :placeholder => t('page.search_term')} -%>
+        <%= search_field_tag 'query', h(@query), {id: 'search_form_bottom', class: 'search_form', placeholder: t('page.search_term')} -%>
         <%= hidden_field_tag 'reservable', h(@reservable) if @reservable -%>
         <%= submit_tag t('page.search') -%>
         <br />
