--- a/app/views/manifestations/_manifestation_list.html.erb
+++ b/app/views/manifestations/_manifestation_list.html.erb
@@ -5,7 +5,7 @@
           [M]
           <%= link_to manifestation.original_title, manifestation -%>
           <%= form_icon(manifestation.carrier_type) -%>
-          <%= link_to image_tag('icons/world_go.png', :size => '16x16', :alt => ('Web')), manifestation.access_address if manifestation.access_address? -%>
+          <%= link_to image_tag('icons/world_go.png', size: '16x16', alt: ('Web')), manifestation.access_address if manifestation.access_address? -%>
           <%= agents_list(manifestation.creators.readable_by(current_user)) -%>
           <%= agents_list(manifestation.contributors.readable_by(current_user)) -%>
           <%= agents_list(manifestation.publishers.readable_by(current_user)) -%>
@@ -19,7 +19,7 @@
           [M]
           <%= link_to manifestation.original_title, manifestation -%>
           <%= form_icon(manifestation.carrier_type) -%>
-          <%= link_to image_tag('icons/world_go.png', :size => '16x16', :alt => ('Web')), manifestation.access_address if manifestation.access_address? -%>
+          <%= link_to image_tag('icons/world_go.png', size: '16x16', alt: ('Web')), manifestation.access_address if manifestation.access_address? -%>
           <%= agents_list(manifestation.creators.readable_by(current_user)) -%>
           <%= agents_list(manifestation.contributors.readable_by(current_user)) -%>
           <%= agents_list(manifestation.publishers.readable_by(current_user)) -%>
