--- a/app/views/manifestations/_search_engine.html.erb
+++ b/app/views/manifestations/_search_engine.html.erb
@@ -1,6 +1,6 @@
 <%- @search_engines.each do |search_engine| -%>
   <p>
-    <%= form_tag search_engine.base_url, :method => search_engine.http_method do -%>
+    <%= form_tag search_engine.base_url, method: search_engine.http_method do -%>
       <%= link_to search_engine.name, search_engine.url -%>
       <%= submit_tag t('page.search') -%>
       <br />
