--- a/app/views/manifestations/index.mobile.erb
+++ b/app/views/manifestations/index.mobile.erb
@@ -1,12 +1,12 @@
 <div data-role="header">
-<h1 class="title"><%= t('page.search_resource', :model => t('page.resource')) -%></h1>
+<h1 class="title"><%= t('page.search_resource', model: t('page.resource')) -%></h1>
 </div>
 
 <div data-role="content">
   <div data-role="fieldcontain">
-    <%= form_for :manifestations, :html => {:method => 'get'} do -%>
+    <%= form_for :manifestations, html: {method: 'get'} do -%>
       <%= label_tag :search_form_top, t('page.search_term') -%>:
-      <%= search_field_tag 'query', h(@query), {:id => 'search_form_top', :class => 'search_form', :placeholder => t('page.search_term')} -%>
+      <%= search_field_tag 'query', h(@query), {id: 'search_form_top', class: 'search_form', placeholder: t('page.search_term')} -%>
       <%= submit_tag t('page.search') -%>
     <% end %>
   </div>
