--- a/app/views/page/_footer.html.erb
+++ b/app/views/page/_footer.html.erb
@@ -8,7 +8,7 @@
     <%= link_to t('page.report_bugs'), "https://github.com/next-l/enju_leaf/issues" -%> |
     <%= link_to t('page.manual'), "http://next-l.github.io/manual/" %>
     <% if is_mobile_request? %>
-      | <%= link_to t('page.mobile_view'), url_for(:mobile_view => 'true') %>
+      | <%= link_to t('page.mobile_view'), url_for(mobile_view: 'true') %>
     <% end %>
   </div>
 </div>
