--- a/app/views/manifestations/_index_form_manifestation.html.erb
+++ b/app/views/manifestations/_index_form_manifestation.html.erb
@@ -1,7 +1,7 @@
-<%= form_for :manifestations, :url => manifestation_manifestations_path(@manifestation), :html => {:method => 'get'} do -%>
+<%= form_for :manifestations, url: manifestation_manifestations_path(@manifestation), html: {method: 'get'} do -%>
   <p>
     <%= label_tag :search_form_top, t('page.search_term') -%>:
-    <%= search_field_tag 'query', h(@query), {:id => 'search_form_top', :class => 'search_form', :placeholder => t('page.search_term')} -%>
+    <%= search_field_tag 'query', h(@query), {id: 'search_form_top', class: 'search_form', placeholder: t('page.search_term')} -%>
     <%= hidden_field_tag 'reservable', h(@reservable) if @reservable -%>
     <% if policy(Manifestation).create?Relationship %>
       <%= render 'page/add' %>
