--- a/app/views/manifestations/_index_form_parent.html.erb
+++ b/app/views/manifestations/_index_form_parent.html.erb
@@ -1,13 +1,13 @@
 <h2 class="resource_title">
   [M]
-  <%= link_to @parent.original_title, @parent, :itemprop => 'name' -%>
+  <%= link_to @parent.original_title, @parent, itemprop: 'name' -%>
 </h2>
 
 <div class="search_form">
-<%= form_for :manifestations, :url => manifestations_path, :html => {:method => 'get'} do -%>
+<%= form_for :manifestations, url: manifestations_path, html: {method: 'get'} do -%>
   <p>
     <%= label_tag :search_form_top, t('page.search_term') -%>:
-    <%= search_field_tag 'query', h(@query), {:id => 'search_form_top', :class => 'search_form', :placeholder => t('page.search_term')} -%>
+    <%= search_field_tag 'query', h(@query), {id: 'search_form_top', class: 'search_form', placeholder: t('page.search_term')} -%>
     <%= hidden_field_tag 'parent_id', @parent.id -%>
     <%= hidden_field_tag 'reservable', h(@reservable) if @reservable -%>
     <% if policy(Manifestation).create? %>
