--- a/app/views/manifestations/_index_form_series_statement.html.erb
+++ b/app/views/manifestations/_index_form_series_statement.html.erb
@@ -1,13 +1,13 @@
 <h2 class="resource_title">
   [S]
-  <%= link_to @series_statement.original_title, @series_statement, :itemprop => 'name' -%>
+  <%= link_to @series_statement.original_title, @series_statement, itemprop: 'name' -%>
 </h2>
 
 <div class="search_form">
-<%= form_for :manifestations, :url => series_statement_manifestations_path(@series_statement), :html => {:method => 'get'} do -%>
+<%= form_for :manifestations, url: series_statement_manifestations_path(@series_statement), html: {method: 'get'} do -%>
   <p>
     <%= label_tag :search_form_top, t('page.search_term') -%>:
-    <%= search_field_tag 'query', h(@query), {:id => 'search_form_top', :class => 'search_form', :placeholder => t('page.search_term')} -%>
+    <%= search_field_tag 'query', h(@query), {id: 'search_form_top', class: 'search_form', placeholder: t('page.search_term')} -%>
     <%= hidden_field_tag 'reservable', h(@reservable) if @reservable -%>
     <% if policy(Manifestation).create? %>
       <%= render 'page/add' %>
