--- a/app/views/manifestations/_manifestation.html.erb
+++ b/app/views/manifestations/_manifestation.html.erb
@@ -3,9 +3,9 @@
           <td style="480px">
             <% cache([current_user_role_name, @locale, manifestation]) do %>
               <% if manifestation.root_series_statement %>
-                <%= render 'manifestations/show_series_index', :manifestation => manifestation, :series_statement => manifestation.root_series_statement -%>
+                <%= render 'manifestations/show_series_index', manifestation: manifestation, series_statement: manifestation.root_series_statement -%>
               <% else %>
-                <%= render 'manifestations/show_index', :manifestation => manifestation -%>
+                <%= render 'manifestations/show_index', manifestation: manifestation -%>
                 <div class="access_address">
                   <%= link_to manifestation.access_address, manifestation.access_address if manifestation.access_address.present? -%>
                 </div>
@@ -22,10 +22,10 @@
                   <%- if manifestation.tags.first -%>
                     (<%= link_to "#", {:onclick => "$('#tag_#{manifestation.id}').toggle(); return false;" } do t('activerecord.models.tag') end %>)
                   <%- end -%>
-                  <%= render 'manifestations/show_tag', :manifestation => manifestation -%>
+                  <%= render 'manifestations/show_tag', manifestation: manifestation -%>
                 <% end %>
               <% end %>
-              <%= render 'manifestations/holding', :manifestation => manifestation -%>
+              <%= render 'manifestations/holding', manifestation: manifestation -%>
             <% end %>
           </td>
             <% if signed_in? %>
