--- a/app/views/manifestations/_pickup.html.erb
+++ b/app/views/manifestations/_pickup.html.erb
@@ -8,7 +8,7 @@
         <p>
           <strong><%= t('activerecord.models.subject') -%>:</strong>
           <%- manifestation.subjects.each do |subject| -%>
-            <%= link_to subject.term, manifestations_path(:query => "subject_sm:\"#{h(subject.term)}\"") -%>
+            <%= link_to subject.term, manifestations_path(query: "subject_sm:\"#{h(subject.term)}\"") -%>
           <%- end -%>
         </p>
       <% end %>
@@ -16,15 +16,15 @@
         <p>
           <strong><%= t('page.tag') -%>:</strong>
           <%- manifestation.tags.each do |tag| -%>
-            <%= link_to tag.name, manifestations_path(:tag => tag.name) -%>
+            <%= link_to tag.name, manifestations_path(tag: tag.name) -%>
          <%- end -%>
         </p>
       <% end %>
     </div>
     <div style="clear: both"></div>
     <div style="margin-top: 5px">
-      <%= render 'manifestations/show_index', :manifestation => manifestation -%>
-      <%= render 'manifestations/holding', :manifestation => manifestation -%>
+      <%= render 'manifestations/show_index', manifestation: manifestation -%>
+      <%= render 'manifestations/holding', manifestation: manifestation -%>
     </div>
   <% end %>
 <% end %>
