--- a/app/views/manifestations/_show_index.html+phone.erb
+++ b/app/views/manifestations/_show_index.html+phone.erb
@@ -6,9 +6,9 @@
     <%- end -%>
   <%- end -%>
   <%= link_to form_icon(manifestation.carrier_type), manifestation -%>
-  <%= image_tag('icons/newspaper.png', :size => '16x16', :alt => t('manifestation.periodical?')) if manifestation.periodical? -%>
-  <%= link_to image_tag('icons/world_go.png', :size => '16x16', :alt => t('manifestation.web')), manifestation.access_address unless manifestation.access_address.blank? -%>
+  <%= image_tag('icons/newspaper.png', size: '16x16', alt: t('manifestation.periodical?')) if manifestation.periodical? -%>
+  <%= link_to image_tag('icons/world_go.png', size: '16x16', alt: t('manifestation.web')), manifestation.access_address unless manifestation.access_address.blank? -%>
   <br />
   <div id="creator_list_<%= manifestation.id -%>">
-    <%= render 'manifestations/show_creators', :manifestation => manifestation -%>
+    <%= render 'manifestations/show_creators', manifestation: manifestation -%>
   </div>
