--- a/app/views/manifestations/index.html.erb
+++ b/app/views/manifestations/index.html.erb
@@ -1,7 +1,7 @@
 <div id="content_detail" class="ui-corner-all ui-widget-content">
-<h1 class="title"><%= t('page.search_resource', :model => t('page.resource')) -%></h1>
+<h1 class="title"><%= t('page.search_resource', model: t('page.resource')) -%></h1>
 <div id="content_list">
-  <%= render 'manifestations/title', :manifestation => @manifestation if @manifestation -%>
+  <%= render 'manifestations/title', manifestation: @manifestation if @manifestation -%>
 
   <% case %>
   <% when @index_agent[:creator] %>
@@ -27,10 +27,10 @@
 
   <%- if @manifestations.total_count > 0 -%>
     <p>
-      <%= t('page.number_of_search_results', :count => @count[:query_result], :numdocs => Manifestation.search('[* TO *]').results.total, :seconds => sprintf("%.3f", @seconds)) -%>
+      <%= t('page.number_of_search_results', count: @count[:query_result], numdocs: Manifestation.search('[* TO *]').results.total, seconds: sprintf("%.3f", @seconds)) -%>
       <%- if @count[:query_result] > Setting.max_number_of_results -%>
         <br />
-        <%= t('page.limit_exceeded', :count => Setting.max_number_of_results) -%>
+        <%= t('page.limit_exceeded', count: Setting.max_number_of_results) -%>
       <%- end -%>
     </p>
 
@@ -39,30 +39,30 @@
       <%- if params[:sort_by].blank? -%>
         <strong><%= t('manifestation.date_of_acquisition') -%></strong>
       <%- else -%>
-        <%= link_to t('manifestation.date_of_acquisition'), url_for(params.merge(:sort_by => nil, :only_path => true)) -%>
+        <%= link_to t('manifestation.date_of_acquisition'), url_for(params.merge(sort_by: nil, only_path: true)) -%>
       <%- end -%>
       <%- if params[:sort_by] == 'pub_date' -%>
         <strong><%= t('activerecord.attributes.manifestation.date_of_publication') -%></strong>
       <%- else -%>
-        <%= link_to t('activerecord.attributes.manifestation.date_of_publication'), url_for(params.merge(:sort_by => 'pub_date', :only_path => true)) -%>
+        <%= link_to t('activerecord.attributes.manifestation.date_of_publication'), url_for(params.merge(sort_by: 'pub_date', only_path: true)) -%>
       <%- end -%>
       <%- if params[:sort_by] == 'title' -%>
         <strong><%= t('page.title') -%></strong>
       <%- else -%>
-        <%= link_to t('page.title'), url_for(params.merge(:sort_by => 'title', :only_path => true)) -%>
+        <%= link_to t('page.title'), url_for(params.merge(sort_by: 'title', only_path: true)) -%>
       <%- end -%>
     </p>
 
     <div class="autopagerize_page_element" id="list">
-      <%= render 'manifestations/list', :manifestations => @manifestations -%>
+      <%= render 'manifestations/list', manifestations: @manifestations -%>
     </div>
 
     <% if defined?(EnjuBookmark) %>
       <div id="tag_cloud">
         <h3 class="resource_title"><%= t('activerecord.models.tag') -%></h3>
         <div id="tag_cloud_list"></div>
-        <%= image_tag 'spinner.gif', :id => 'spinner_tag_cloud',
-          :style => 'padding-bottom: 15px; padding-left: 40px;' -%>
+        <%= image_tag 'spinner.gif', id: 'spinner_tag_cloud',
+          style: 'padding-bottom: 15px; padding-left: 40px;' -%>
       </div>
     <% end %>
   <%- else -%>
@@ -78,15 +78,15 @@
   <% if @parent and policy(@parent).update? %>
     <%= render 'submenu_parent' %>
   <% end %>
-  <h3><%= link_to h("#{t('page.total')}: #{@count[:query_result]}"), url_for(params.merge(:action => 'index', :view => nil, :carrier_type => nil, :library => nil, :language => nil, :subject => nil, :only_path => true))  -%></h3>
+  <h3><%= link_to h("#{t('page.total')}: #{@count[:query_result]}"), url_for(params.merge(action: 'index', view: nil, carrier_type: nil, library: nil, language: nil, subject: nil, only_path: true))  -%></h3>
     <%- if @manifestations.total_count > 0 -%>
       <%= render 'manifestations/all_facet' -%>
     <%- end -%>
   <div>
     <%- if params[:library_id].blank? -%>
-      <%= link_to((image_tag 'icons/feed.png', :size => '16x16', :alt => t('page.feed'), :class => 'icon'), url_for(params.merge(:format => :rss, :page => nil, :library_id => nil, :only_path => true))) -%> <%= link_to t('page.search_result_feed'), url_for(params.merge(:format => :rss, :page => nil, :library_id => nil, :commit => nil, :only_path => true)) -%>
+      <%= link_to((image_tag 'icons/feed.png', size: '16x16', alt: t('page.feed'), class: 'icon'), url_for(params.merge(format: :rss, page: nil, library_id: nil, only_path: true))) -%> <%= link_to t('page.search_result_feed'), url_for(params.merge(format: :rss, page: nil, library_id: nil, commit: nil, only_path: true)) -%>
     <%- else -%>
-      <%= link_to((image_tag 'icons/feed.png', :size => '16x16', :alt => t('page.feed'), :class => 'icon'), url_for(params.merge(:format => :rss, :page => nil, :only_path => true))) -%> <%= link_to t('page.search_result_feed'), url_for(params.merge(:format => :rss, :page => nil, :commit => nil, :only_path => true)) -%>
+      <%= link_to((image_tag 'icons/feed.png', size: '16x16', alt: t('page.feed'), class: 'icon'), url_for(params.merge(format: :rss, page: nil, only_path: true))) -%> <%= link_to t('page.search_result_feed'), url_for(params.merge(format: :rss, page: nil, commit: nil, only_path: true)) -%>
     <%- end -%>
   </div>
 </div>
@@ -94,7 +94,7 @@
 <% if defined?(EnjuBookmark) %>
   <script type="text/javascript">
     window.onload = function() {
-      $("#tag_cloud_list").load('<%= url_for(params.merge(:view => "tag_cloud", :only_path => true)) -%>', hideTagCloudSpinner);
+      $("#tag_cloud_list").load('<%= url_for(params.merge(view: "tag_cloud", only_path: true)) -%>', hideTagCloudSpinner);
     }
 
     function hideTagCloudSpinner(){
