--- a/app/views/manifestations/_show_reservation.html.erb
+++ b/app/views/manifestations/_show_reservation.html.erb
@@ -17,7 +17,7 @@
                     <% when @parent %>
                       <%= link_to t('page.add'), new_manifestation_manifestation_relationship_path(@parent, child_id: manifestation.id) unless @parent.derived_manifestations.include?(manifestation) or @parent == manifestation -%>
                     <% when @item %>
-                      <%= link_to t('page.change'), edit_exemplify_path(@item.exemplify, manifestation_id: manifestation.id) unless @item.manifestation == manifestation -%>
+                      <%= link_to t('page.change'), edit_item_path(@item, manifestation_id: manifestation.id) unless @item.manifestation == manifestation -%>
                     <% else %>
                       <%= link_to image_tag('icons/arrow_divide.png', size: '16x16', alt: t('manifestation.add_derivation')), new_manifestation_path(parent_id: manifestation.id) -%>
                     <% end %>
