--- a/app/views/manifestations/_index_form_parent.html.erb
+++ b/app/views/manifestations/_index_form_parent.html.erb
@@ -1,6 +1,10 @@
 <h2 class="resource_title">
   [M]
   <%= link_to @parent.original_title, @parent, itemprop: 'name' -%>
+  <% if @parent.periodical? %>
+    <%= image_tag('icons/newspaper.png', size: '16x16', alt: t('manifestation.serial')) -%>
+  <%- end -%>
+  <%= link_to form_icon(@parent.carrier_type), @parent -%>
 </h2>
 
 <div class="search_form">
