--- a/app/views/manifestations/_show_series_index.html.erb
+++ b/app/views/manifestations/_show_series_index.html.erb
@@ -1,6 +1,9 @@
 <strong><%= link_to manifestation.original_title, manifestations_path(parent_id: manifestation.id, query: @query) -%></strong>
   <%= link_to form_icon(manifestation.carrier_type), manifestation -%>
   <%= link_to image_tag('icons/world_go.png', size: '16x16', alt: t('manifestation.web')), manifestation.access_address unless manifestation.access_address.blank? -%>
+  <% if manifestation.series_master? %>
+    <%= image_tag('icons/newspaper.png', size: '16x16', alt: t('manifestation.serial')) -%>
+  <%- end -%>
   <br />
   <div id="creator_list_<%= manifestation.id -%>">
     <%= render 'manifestations/show_creators', manifestation: manifestation -%>
