--- a/app/views/manifestations/_index_form_parent.html.erb
+++ b/app/views/manifestations/_index_form_parent.html.erb
@@ -1,3 +1,5 @@
+<%= render 'paginate_id_link', manifestation: @parent, manifestation_ids: @manifestation_ids %>
+
 <h2 class="resource_title">
   [M]
   <%= link_to @parent.original_title, @parent, itemprop: 'name' -%>
