--- a/app/views/manifestations/_show_detail_librarian.html.erb
+++ b/app/views/manifestations/_show_detail_librarian.html.erb
@@ -66,7 +66,7 @@
             </td>
           </tr>
         <% end %>
-        <%- unless manifestation.periodical? -%>
+        <%- unless manifestation.serial? -%>
           <tr>
             <td><%= t('page.identifier') -%>:</td>
             <td>
