--- a/app/views/manifestations/_show_index.html.erb
+++ b/app/views/manifestations/_show_index.html.erb
@@ -6,7 +6,7 @@
     <%= link_to title_with_volume_number(manifestation), manifestation -%>
   <% end %>
 </strong>
-  <% if manifestation.periodical? %>
+  <% if manifestation.serial? %>
     <%= image_tag('icons/newspaper.png', size: '16x16', alt: t('manifestation.serial')) -%>
   <%- end -%>
   <%= link_to form_icon(manifestation.carrier_type), manifestation -%>
