--- a/app/views/manifestations/_show_series_index.html.erb
+++ b/app/views/manifestations/_show_series_index.html.erb
@@ -1,5 +1,5 @@
 <strong><%= link_to manifestation.original_title, manifestations_path(parent_id: manifestation.id, query: @query) -%></strong>
-  <% if manifestation.periodical? %>
+  <% if manifestation.serial? %>
     <%= image_tag('icons/newspaper.png', size: '16x16', alt: t('manifestation.serial')) -%>
   <%- end -%>
   <%= link_to form_icon(manifestation.carrier_type), manifestation -%>
