--- a/app/views/manifestations/_show_holding.html.erb
+++ b/app/views/manifestations/_show_holding.html.erb
@@ -46,7 +46,7 @@
         </td>
       <% end %>
     </tr>
-    <% if can? :update, item %>
+    <% if policy(item).update? %>
       <script>
         $(function(){
           $('a#item_identifier_item_<%= item.id %>').data(
@@ -64,7 +64,7 @@
   <%- end -%>
 </table>
 
-<%- if can? :create, Item -%>
+<%- if policy(Item).create? -%>
   <p><%= link_to t('page.new', model: t('activerecord.models.item')), new_item_path(manifestation_id: manifestation.id) -%></p>
 <%- end -%>
 </div>
