--- a/app/views/manifestations/_index_form_parent.html.erb
+++ b/app/views/manifestations/_index_form_parent.html.erb
@@ -16,7 +16,7 @@
     <%= search_field_tag 'query', h(@query), {id: 'search_form_top', class: 'search_form', placeholder: t('page.search_term')} -%>
     <%= hidden_field_tag 'parent_id', @parent.id -%>
     <%= hidden_field_tag 'reservable', h(@reservable) if @reservable -%>
-    <% if can? :update, Manifestation %>
+    <% if policy(Manifestation).create? %>
       <%= render 'page/add' %>
     <% end %>
     <%= submit_tag t('page.search') -%>
