updated template files
Conflicts:
	app/views/manifestations/_index_form_series_statement.html.erb

--- a/app/views/manifestations/_show_detail_librarian.html.erb
+++ b/app/views/manifestations/_show_detail_librarian.html.erb
@@ -106,7 +106,9 @@
         </tr>
       </table>
     <% end %>
-      <%= render 'manifestations/show_holding', manifestation: manifestation -%>
+      <%- if manifestation.items.on_shelf.exists? -%>
+        <%= render 'manifestations/show_holding', manifestation: manifestation -%>
+      <%- end -%>
     </div>
     <%= render 'manifestations/tab_list', manifestation: manifestation %>
   </div>
