--- a/app/views/manifestations/show.html+phone.erb
+++ b/app/views/manifestations/show.html+phone.erb
@@ -14,7 +14,7 @@
 <td><%= @manifestation.price %></td>
 </tr>
 </table>
-<%- if @manifestation.items.on_shelf.exists? -%>
+<%- if @manifestation.items.for_checkout.on_shelf.exists? -%>
   <%= render 'manifestations/show_holding', manifestation: @manifestation -%>
 <%- end -%>
 </div>
