show manifestation_identifier next-l/enju_leaf#372

--- a/app/views/manifestations/_show_detail_librarian.html.erb
+++ b/app/views/manifestations/_show_detail_librarian.html.erb
@@ -77,6 +77,12 @@
                     <%= identifier_link(identifier) %>
                   </li>
                 <% end %>
+                <% if manifestation.manifestation_identifier %>
+                  <li>
+                    <%= t('activerecord.attributes.manifestation.manifestation_identifier') %>:
+                    <%= manifestation.manifestation_identifier %>
+                  </li>
+                <% end %>
               </ul>
             </td>
           </tr>
