update spec files

--- a/app/views/manifestations/show.html.erb
+++ b/app/views/manifestations/show.html.erb
@@ -46,7 +46,7 @@
       <ul>
         <%- if user_signed_in? -%>
           <%- if current_user.email.present? -%>
-            <li><%= link_to t('manifestation.send_email'), manifestation_path(mode: 'send_email'), data: {confirm: t('page.are_you_sure')} -%></li>
+            <li><%= link_to t('manifestation.send_email'), manifestation_path(@manifestation, mode: 'send_email'), data: {confirm: t('page.are_you_sure')} -%></li>
           <%- end -%>
           <% if defined?(EnjuBookmark) %>
             <li><%= link_to_bookmark(@manifestation) %></li>
