fix template path

--- a/app/views/manifestations/show.html.erb
+++ b/app/views/manifestations/show.html.erb
@@ -80,6 +80,6 @@
       <%- if current_user.try(:has_role?, 'Librarian') -%>
         <%= render 'manifestations/edit_detail' %>
       <% end %>
-      <%= render 'manifestations/export' %>
+      <%= render 'manifestations/export_detail' %>
   </div>
 </div>
