--- a/app/views/manifestations/_show_detail_user.html.erb
+++ b/app/views/manifestations/_show_detail_user.html.erb
@@ -113,7 +113,7 @@
       </table>
     <% end %>
       <%- if manifestation.items.for_checkout.on_shelf.exists? -%>
-        <%= render 'manifestations/show_holding', manifestation: manifestation -%>
+        <%= render 'manifestations/show_holding', manifestation: manifestation, items: manifestation.items.for_checkout.on_shelf %>
       <%- end -%>
     </div>
     <%= render 'manifestations/tab_list', manifestation: manifestation %>
